--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
+    "@nuxtjs/axios": "^5.0.0",
+    "css-loader": "^1.0.0",
     "express": "^4.15.3",
-    "vuetify": "^1.0.19",
-    "@nuxtjs/axios": "^5.0.0"
+    "nuxt": "^1.0.0",
+    "style-loader": "^0.21.0",
+    "vuetify": "^1.0.19"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
